--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -90,6 +90,9 @@ jobs:
             echo "▶ JAR 파일 권한 및 소유자 확인"
             ls -la "$APP_LATEST_JAR"
             
+            echo "▶ 현재 JAR 파일 상태 확인"
+            ls -la /home/ubuntu/app-*.jar || echo "JAR 파일 없음"
+            
             # PM2 설정 확인
             echo "▶ PM2 설정 파일 확인"
             if [ ! -f "ecosystem.config.js" ]; then
@@ -127,6 +130,10 @@ jobs:
             echo "▶ 기존 app-new 프로세스만 정리 (app은 유지)"
             pm2 delete "app-new" 2>/dev/null || true
             pm2 save --force
+            
+            # PM2 설정 리로드
+            echo "▶ PM2 설정 리로드"
+            pm2 reload ecosystem.config.js
             sleep 3
             
             # PM2 프로세스 목록 확인
