--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,28 @@
+// 플러그인 관리 설정 (반드시 맨 처음에 와야 함)
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        mavenCentral()
+        google()
+    }
+}
+
 rootProject.name = 'erp-api-server'
+
+// 의존성 해결 전략
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        mavenCentral()
+        maven { url 'https://repo.spring.io/milestone' }
+        maven { url 'https://repo.spring.io/snapshot' }
+    }
+}
+
+// 빌드 캐시 설정 (빌드 속도 향상)
+buildCache {
+    local {
+        directory = new File(rootDir, 'build-cache')
+        removeUnusedEntriesAfterDays = 30
+    }
+}
