--- a/docker-compose.local.yaml
+++ b/docker-compose.local.yaml
@@ -1,11 +1,13 @@
+version: '3.8'
+
 services:
   db:
     image: postgres:14
     container_name: erp-db
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER:-erpuser}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-erppassword}
+      POSTGRES_DB: ${POSTGRES_DB:-erpdb}
     ports:
       - "5432:5432"
     volumes:
