--- a/build.gradle
+++ b/build.gradle
@@ -1,93 +1,89 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.5.0' // Spring Boot 플러그인
-    id 'io.spring.dependency-management' version '1.1.7' // 의존성 관리 플러그인
+    id 'org.springframework.boot' version '3.5.0'
+    id 'io.spring.dependency-management' version '1.1.7'
 }
 
 group = 'com.lineinc'
 version = '0.0.1-SNAPSHOT'
 
+// 의존성 버전 관리
+ext {
+    springdocVersion = '2.8.0'
+    querydslVersion = '5.1.0'
+    poiVersion = '5.2.5'
+    awsSdkVersion = '2.26.11'
+    bucket4jVersion = '7.3.0'
+    javersVersion = '7.4.0'
+}
+
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(17) // Java 17 버전 설정
+        languageVersion = JavaLanguageVersion.of(17)
     }
 }
 
 configurations {
     compileOnly {
-        extendsFrom annotationProcessor // annotationProcessor도 compileOnly로 확장
+        extendsFrom annotationProcessor
     }
 }
 
-
-
 dependencies {
-    // Spring Boot Starters
-    implementation 'org.springframework.boot:spring-boot-starter-web' // 웹 애플리케이션
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // JPA
-    implementation 'org.springframework.boot:spring-boot-starter-security' // Spring Security
-    implementation 'org.springframework.boot:spring-boot-starter-validation' // Bean Validation
-    implementation 'org.springframework.boot:spring-boot-starter-actuator' // 헬스 체크 등 모니터링
+    // Spring Boot 스타터들
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
-    // Database
-    runtimeOnly 'org.postgresql:postgresql' // PostgreSQL 드라이버
-    implementation 'org.springframework.session:spring-session-jdbc' // JDBC 기반 세션 관리
+    // 데이터베이스 및 세션 관리
+    runtimeOnly 'org.postgresql:postgresql'
+    implementation 'org.springframework.session:spring-session-jdbc'
 
-    // Lombok
-    compileOnly 'org.projectlombok:lombok' // 컴파일 시 Lombok
-    annotationProcessor 'org.projectlombok:lombok' // Lombok 애노테이션 프로세서
+    // 개발 도구
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 
-    // Configuration Processor
-    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor' // @ConfigurationProperties 지원
-
-    // Swagger / OpenAPI
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.0' // Swagger UI
+    // API 문서화
+    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springdocVersion}"
 
     // QueryDSL
-    implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta' // QueryDSL JPA 지원
-    annotationProcessor 'com.querydsl:querydsl-apt:5.1.0:jakarta' // QueryDSL APT
-    annotationProcessor 'jakarta.persistence:jakarta.persistence-api' // JPA 애노테이션 지원
-    annotationProcessor 'jakarta.annotation:jakarta.annotation-api' // 기타 Jakarta 애노테이션 지원
+    implementation "com.querydsl:querydsl-jpa:${querydslVersion}:jakarta"
+    annotationProcessor "com.querydsl:querydsl-apt:${querydslVersion}:jakarta"
+    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
+    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
 
-    // Apache POI for Excel export
-    implementation 'org.apache.poi:poi-ooxml:5.2.5' // Excel 파일 처리
+    // 파일 처리
+    implementation "org.apache.poi:poi-ooxml:${poiVersion}"
 
-    // Spring Boot Mail Starter
+    // 외부 서비스
     implementation 'org.springframework.boot:spring-boot-starter-mail'
+    implementation "software.amazon.awssdk:s3:${awsSdkVersion}"
 
-    // AWS SDK v2 S3 dependency
-    implementation 'software.amazon.awssdk:s3:2.26.11'
-
-    // 사용자별 또는 IP 기반 요청 제한을 위한 Bucket4j 라이브러리
-    implementation 'com.github.vladimir-bukhtoyarov:bucket4j-core:7.3.0'
-
-    // Javers for auditing
-    implementation 'org.javers:javers-spring-boot-starter-sql:7.4.0'
-}
-
-tasks.named('test') {
-    useJUnitPlatform()
+    // 유틸리티
+    implementation "com.github.vladimir-bukhtoyarov:bucket4j-core:${bucket4jVersion}"
+    implementation "org.javers:javers-spring-boot-starter-sql:${javersVersion}"
 }
 
 sourceSets {
     main {
         java {
-            // 기본 소스 폴더(src/main/java) 외에, QueryDSL이 생성하는 코드를 포함하기 위해
-            // 자동 생성 코드 디렉터리를 컴파일 대상에 추가합니다.
+            // QueryDSL이 생성한 소스 코드 포함
             srcDirs += 'build/generated/querydsl'
         }
     }
 }
 
 tasks.withType(JavaCompile).configureEach {
-    // Java 컴파일 시 자동 생성되는 소스 코드의 출력 디렉터리를 지정합니다.
-    // QueryDSL이 생성하는 Q타입 클래스들이 이 경로에 생성됩니다.
-    // 이렇게 지정함으로써 컴파일러가 자동 생성 코드를 인식할 수 있게 됩니다.
+    // QueryDSL을 위한 생성된 소스 출력 디렉토리 설정
     options.generatedSourceOutputDirectory.set(file("build/generated/querydsl"))
+    options.compilerArgs += ['-parameters']
+    options.encoding = 'UTF-8'
 }
 
-// plain JAR (일반 JAR) 생성을 비활성화하여,
-// Spring Boot 실행용 fat JAR (bootJar)만 생성되도록 설정
+// 일반 JAR 생성을 비활성화하고, Spring Boot 실행용 JAR만 생성
 tasks.named('jar') {
     enabled = false
 }
